# mcp-architect

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/mcp_architect/: main.py  server.py  writeback_hook.py
src/mcp_architect/templates/: CLAUDE.md
