[project]
name = "mcp-architect"
version = "0.1.0"
description = "给 Claude 增加业务逻辑长期记忆与架构师能力"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "fastmcp",
    "uv"
]

[project.scripts]
# 这是用户安装后运行的命令，指向 installer
mcp-arch = "mcp_architect.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_architect"]